added relations ships endpoint
