# src/api/controllers/relation.controller.js
@@ -1,0 +1,9 @@
+const RelationService = require('../services/relation.service');
+
+function getRelations(req, res) {
+  new RelationService(req, res).getRelationsResponse();
+}
+
+module.exports = {
+  getRelations
+};
